objects/BLND_DFDT_Highlight__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Highlight_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Highlight Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002PYgoEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Include_in_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Include_in_Weekly_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Weekly Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Link</label>
        <referenceTo>BLND_DFDT_Project__c</referenceTo>
        <relationshipLabel>DreamTeam Highlights</relationshipLabel>
        <relationshipName>R00N30000002PYiTEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>DreamTeam Highlight</label>
    <nameField>
        <label>Highlight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Highlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>